package com.etu.infrastructure.state.dto.runtime.erm;

public enum ERModelRelationSideType {
    ONE,
    MANY,
    MAIN,
    DEPENDENT,
    PARENT,
    SPECIFIC
}
