package com.etu.infrastructure.state.dto.runtime.erm;

public enum ERModelRelationType {
    ONE_TO_ONE,
    ONE_TO_MANY,
    MANY_TO_MANY,
    DEPENDS_ON,
    CATEGORY
}
